[package]
name = "bind-hosts-generator"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5"
structopt = "0.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version= "0.9", features = ["rustls-tls"], default-features = false}


