[package]
name = "bind-hosts-generator"
version = "0.1.0"
authors = ["Nicolas goy <kuon@goyman.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.5.9"
structopt = "0.3.26"
serde = { version = "1.0.137", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "rustls-tls"], default-features = false }


